src/test/deca/syntax/invalid/resultats/test35_class_decl-lex.res
'class': [@0,316:320='class',<7>,15:0]
IDENT: [@1,322:322='A',<26>,15:6]
'{': [@2,324:324='{',<36>,15:8]
'class': [@3,327:331='class',<7>,17:0]
IDENT: [@4,333:333='B',<26>,17:6]
'{': [@5,335:335='{',<36>,17:8]
'}': [@6,337:337='}',<37>,18:0]
